# serializer version: 1
# name: test_append_csv[1]
  dict({
    'csv': dict({
      'filename': list([
        'seed_file',
      ]),
      'session_end': list([
        '2025-01-02 14:06:06+00:00',
      ]),
      'session_start': list([
        '2025-01-02 14:05:06+00:00',
      ]),
      'typed_correct': list([
        1,
      ]),
      'typed_incorrect': list([
        0,
      ]),
    }),
    'metrics': dict({
      'filename': 'seed_file',
      'session_end': FakeDatetime(2025, 1, 2, 14, 6, 6, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'session_start': FakeDatetime(2025, 1, 2, 14, 5, 6, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'typed_correct': 1,
      'typed_incorrect': 0,
    }),
  })
# ---
# name: test_append_csv[2]
  dict({
    'csv': dict({
      'filename': list([
        'seed_file',
        'seed_file',
      ]),
      'session_end': list([
        '2025-01-02 14:06:06+00:00',
        '2025-01-02 14:08:06+00:00',
      ]),
      'session_start': list([
        '2025-01-02 14:05:06+00:00',
        '2025-01-02 14:06:06+00:00',
      ]),
      'typed_correct': list([
        1,
        1,
      ]),
      'typed_incorrect': list([
        0,
        1,
      ]),
    }),
    'metrics': dict({
      'filename': 'seed_file',
      'session_end': FakeDatetime(2025, 1, 2, 14, 8, 6, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'session_start': FakeDatetime(2025, 1, 2, 14, 6, 6, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'typed_correct': 1,
      'typed_incorrect': 1,
    }),
  })
# ---
